<resources>
    <string name="steps_goal_one">"4500 steps "</string>
    <string name="profile_gender" translatable="false">profile_gender</string>
    <string name="profile_gender_values" translatable="false">profile_gender_values</string>
    <string name="edit_notification_item_name">Edit</string>
    <string name="edit_notification_delete_item">Delete</string>
    <string name="add_new_notification_dialog_title">Add name</string>
    <string name="add_new_notification_dialog_hint_content">Input name</string>
    <string name="new_nt_def_name">name</string>
    <string name="new_nt_select_color">Choose color</string>
    <string name="notification_def_name">Red</string>
    <string name="unit_length" >mi</string>
    <string name="unit_cal">kcal</string>
    <string name="lunar_steps_percentage">OF GOAL</string>
    <string name="home_time_home_city_name"  translatable="false">Getting location.. </string>
    <string name="permission_location_message">We need your location to search for your LunaR and to determine the sunset and sunrise time</string>
    <string name="edit_home_position_city">Position City</string>
    <string name="edit_home_all_city">All City</string>
    <string name="lunar_main_clock_charging_status_title">REALTIME HARVEST STATUS</string>
    <string name="lunar_main_clock_sleep_time_title">INACTIVITY</string>
    <string name="lunar_main_clock_local_home_time">LOCAL HOME TIME</string>
    <string name="lunar_main_clock_home_city_sunrise">SUNRISE</string>
    <string name="lunar_main_clock_home_city_sunset">SUNSET</string>
    <string name="lunar_home_clock_steps_title_tv">CALORIES BURNED</string>
    <string name="my_watch_firmwer_version">Version </string>
    <string name="my_watch_firmwer_version_describe">\" is now available for your LunaR!</string>
    <string name="app_name" translatable="false">Nevo</string>
    <string name="menu_drawer_activity">Activity</string>
    <string name="menu_drawer_alarm">Alarm</string>
    <string name="menu_drawer_hometime">Home Time</string>
    <string name="menu_drawer_sleep">Sleep</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="choose_activity_title_choose_city_tv">Choose a City</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="provider_file_string" translatable="false">com.med.fileprovider</string>
    <string name="ble_not_supported">Smartphone does not support BLE</string>
    <string name="ble_deactivated">Bluetooth is turned off, please turn the bluetooth on to make connection.</string>
    <string name="ble_unstable">Bluetooth connection is unstable, please keep the watch closer to the phone.</string>
    <string name="ble_connect_timeout">If connected to the internet, press Help button for solutions</string>
    <string name="ble_notification_title">Notification</string>
    <string name="ble_notification_message">nevo is not paired, please pair first</string>
    <string name="ble_command_timeout_title">Bluetooth communication timeout</string>
    <string name="ble_connect_timeout_url" translatable="false">https://nevowatch.freshdesk.com/solution/categories/5000086192/folders/5000257648/articles/5000619809-if-you-are-experiencing-intermittent-bluetooth-disconnection-problems-on-android</string>
    <string name="ble_connection_timeout_title">Bluetooth connection timeout</string>
    <string name="ble_connection_timeout_cancel">Cancel</string>
    <string name="ble_connection_timeout_help">Help</string>
    <string name="notification_call_title">Call</string>
    <string name="notification_sms_title">SMS</string>
    <string name="notification_email_title">Email</string>
    <string name="notification_facebook_title">Facebook</string>
    <string name="notification_calendar_title">Calendar</string>
    <string name="notification_wechat_title">WeChat</string>
    <string name="notification_whatsapp_title">WhatsApp</string>
    <string name="location_access_title">This app needs location access</string>
    <string name="location_access_content">Please grant location access so it can detect nevo.</string>
    <string name="dfu_update">Update</string>
    <string name="dfu_back_to_settings">Back to settings</string>
    <string name="dfu_retry">Retry</string>
    <string name="dfu_update_title">Do not exit this screen</string>
    <string name="dfu_update_content">Please follow the instructions and wait until the update has been finished.</string>
    <string name="dfu_update_positive">Update</string>
    <string name="dfu_update_negative">Cancel</string>
    <string name="dfu_update_prepare">Prepare for update&#8230;</string>
    <string name="dfu_firmware_updated">Firmware updated</string>
    <string name="dfu_continue">Continue</string>
    <string name="dfu_back">Back</string>
    <string name="dfu_press_third_button">Press the third button</string>
    <string name="dfu_press_third_button_description">Don’t exit this screen while reactivating your bluetooth!</string>
    <string name="dfu_failed_preparing">Failed to prepare the update, please restart the BT of nevo or reinstall battery.</string>
    <string name="dfu_re_upgrade">Try again</string>
    <string name="dfu_continue_button">Continue</string>
    <string name="dfu_connect_error_no_nevo_do_ota">nevo isn\'t connected, can\'t perform OTA update</string>
    <string name="dfu_checking_firmware">Checking firmware version, please wait&#8230;</string>
    <string name="dfu_error_lowbattery">Not enough battery to upgrade.</string>
    <string name="dfu_error_timeout">Connection timed out</string>
    <string name="dfu_error_noconnect">No nevo connected</string>
    <string name="dfu_error_openfile">Open Firmware file error.</string>
    <string name="dfu_error_checksum">Checksum error.</string>
    <string name="dfu_error_nofounDFUservice">No OTA service found, please wait for few minutes and try again.</string>
    <string name="dfu_error_other">Couldn\'t update due to an error.</string>
    <string name="dfu_update_message">Updating&#8230;</string>
    <string name="dfu_update_available">An update is available for your watch.</string>
    <string name="notification_allow">Allow Notifications</string>
    <string name="notification">Notification</string>
    <string name="notification_led_red">Red LED</string>
    <string name="notification_led_blue">Blue LED</string>
    <string name="notification_led_light_green">Light green LED</string>
    <string name="notification_led_yellow">Yellow LED</string>
    <string name="notification_led_orange">Orange LED</string>
    <string name="notification_led_green">Green LED</string>
    <string name="notification_position">Position</string>
    <string name="notification_ok">OK</string>
    <string name="notification_cancel">Cancel</string>
    <string name="notification_deactivated">Deactivated</string>
    <string name="notification_access_title">Notification Access</string>
    <string name="notification_access_message">Do you want to enable notifications for nevo?</string>
    <string name="notification_connect_title">Nevo connected</string>
    <string name="notification_connect_content">your Nevo has got connected</string>
    <string name="notification_disconnect_title">Nevo disconnect</string>
    <string name="notification_disconnect_content">your Nevo has got disconnect</string>
    <string name="tutorial_1_title">Let\'s get started!</string>
    <string name="tutorial_1_text">Use your nevo watch to set, track and analyse your personal health and fitness data.</string>
    <string name="tutorial_1_lets_activate">Activate your nevo</string>
    <string name="tutorial_2_title">Turn on Bluetooth</string>
    <string name="tutorial_2_continue">Continue</string>
    <string name="tutorial_2_text">Open your settings to activate \n before you continue.</string>
    <string name="tutorial_2_dialog_negative">Settings</string>
    <string name="tutorial_2_dialog_positive">Turn on Bluetooth in the settings to connect with nevo</string>
    <string name="tutorial_3_title">Set time</string>
    <string name="tutorial_3_text">Pull the crown out and turn to set the time on your nevo watch. Be aware that nevo doesn\’t syncs time with your phone.</string>
    <string name="tutorial_3_next">Next</string>
    <string name="tutorial_4_title">Turn on nevo</string>
    <string name="tutorial_4_text">Push and hold the third button, until the blue LED blinks.</string>
    <string name="tutorial_4_next">Next</string>
    <string name="tutorial_5_title">Searching</string>
    <string name="tutorial_5_text">Keep nevo close to your phone</string>
    <string name="tutorial_failed_title">Cannot connect</string>
    <string name="tutorial_failed_text">Make sure the blue LED on nevo is blinking and try again.</string>
    <string name="tutorial_failed_try_again">Try Again</string>
    <string name="tutorial_success_title">Connected</string>
    <string name="tutorial_success_tap_to_continue">Tap to continue</string>
    <string name="sleep_sleep_duration">Sleep duration</string>
    <string name="sleep_sleep_time">Sleep time</string>
    <string name="steps_goal_title">Goal</string>
    <string name="alarm_add">Add alarm</string>
    <string name="goal_ok">OK</string>
    <string name="goal_cancel">Cancel</string>
    <string name="log_in_email">E-mail</string>
    <string name="log_in_password">Password</string>
    <string name="register_create_account">Create account</string>
    <string name="register_password_confirm">Re-type Password</string>
    <string name="register_to_login">Already a member? Login</string>
    <string name="profile_input_height">Input height</string>
    <string name="profile_set_height">Set height (cm)</string>
    <string name="profile_input_weight">Input weight</string>
    <string name="profile_set_weight">Set weight (kg)</string>
    <string name="profile_input_gender">Select gender</string>
    <string name="profile_set_gender">Set gender</string>
    <string name="profile_input_age">Input age</string>
    <string name="profile_set_age">Set age</string>
    <string name="profile_input_unit">Select unit</string>
    <string name="profile_set_unit">Set unit</string>
    <string name="register_account_page_title">Sign Up</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_terms_text">Terms &amp; Conditions</string>
    <string name="register_terms_is_agree">I agree to the terms and conditions</string>
    <string name="activity_user_info_title_above_text">Your information</string>
    <string name="activity_user_info_text_dec_middle">Enter your information below.\n Don\'t worry, it is completely private to you and\n your phone.</string>
    <string name="activity_user_info_text_our_text">Check our private policy</string>
    <string name="activity_user_info_birthday">Date of Birth</string>
    <string name="activity_user_info_height">Height</string>
    <string name="activity_user_info_weight">Weight</string>
    <string name="activity_user_info_man">Male</string>
    <string name="activity_user_info_female">Female</string>
    <string name="analysis_fragment_title_string">Analysis</string>
    <string name="steps_goal_two">7000 steps</string>
    <string name="steps_goal_three">10000 steps</string>
    <string name="steps_goal_four">20000 steps</string>
    <string name="edit_alarm_repeat">Repeat</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="edit_alarm_sleep">Sleep Alarm</string>
    <string name="edit_alarm_wake">Wake Alarm</string>
</resources>