<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="fragment_edit_profile_height"
        android:inputType="numberDecimal"
        android:dialogTitle="@string/profile_input_height"
        android:id="@+id/fragment_edit_profile_height"
        android:summary="@string/profile_set_height"
        android:title="175" />

    <EditTextPreference
        android:key="fragment_edit_profile_weight"
        android:inputType="numberDecimal"
        android:dialogTitle="@string/profile_input_weight"
        android:id="@+id/fragment_edit_profile_weight"
        android:summary="@string/profile_set_weight"
        android:title="70" />

    <ListPreference
        android:key="fragment_edit_profile_gender"
        android:id="@+id/fragment_edit_profile_gender"
        android:summary="@string/profile_set_gender"
        android:entries="@array/profile_gender"
        android:entryValues="@array/profile_gender_values"
        android:dialogTitle="@string/profile_input_gender"
        android:defaultValue="1"
        android:title="male" />
    <EditTextPreference
        android:key="fragment_edit_profile_age"
        android:inputType="numberDecimal"
        android:dialogTitle="@string/profile_input_age"
        android:id="@+id/fragment_edit_profile_age"
        android:summary="@string/profile_set_age"
        android:title="18" />

    <ListPreference
        android:key="fragment_edit_profile_unit"
        android:id="@+id/fragment_edit_profile_unit"
        android:summary="@string/profile_set_unit"
        android:entries="@array/profile_unit"
        android:entryValues="@array/profile_unit_values"
        android:dialogTitle="@string/profile_input_unit"
        android:defaultValue="0"
        android:title="metric" />

</PreferenceScreen>