<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dp"
              android:padding="20dp"
              android:background="@color/window_background_color"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_add"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/edit_input_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/transparent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/edit_alarm_repeat"
            android:textSize="26sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        >
        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_monday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/monday"
                android:textOn="@string/monday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_tuesday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/tuesday"
                android:textOn="@string/tuesday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_wednesday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/wednesday"
                android:textOn="@string/wednesday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_thursday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/thursday"
                android:textOn="@string/thursday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_friday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/friday"
                android:textOn="@string/friday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_saturday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/saturday"
                android:textOn="@string/saturday">
            </ToggleButton>
        </LinearLayout>

        <LinearLayout
            style="@style/new_alarm_clock_repeat_days_llyt">

            <ToggleButton
                android:id="@+id/tog_btn_sunday"
                style="@style/new_alarm_clcok_repeat_days_tog_btn"
                android:textOff="@string/sunday"
                android:textOn="@string/sunday">
            </ToggleButton>
        </LinearLayout>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/select_alarm_style_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/alarm_style_sleep"
            style="@style/StepsGoalDialogRadioBUttonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:checked="true"
            android:maxLines="1"
            android:text="@string/edit_alarm_sleep"/>
        <RadioButton
            android:id="@+id/alarm_style_wake"
            style="@style/StepsGoalDialogRadioBUttonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:text="@string/edit_alarm_wake"/>
    </RadioGroup>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        >

        <Button
            android:id="@+id/cancel_edit_alarm_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_cancel"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparent"
            />
        <Button
            android:id="@+id/add_new_alarm_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_ok"
            android:textColor="@color/colorPrimary"
            android:background="@color/transparent"
            />
    </LinearLayout>
</LinearLayout>