<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/activity_user_info_title"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/activity_user_info_title_above_text"
        android:textColor="@color/white"
        android:textSize="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/activity_user_info_text_dec_middle"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/activity_user_info_text_our_text"
        android:textColor="@color/register_account_text_color"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/user_info_gender_select"
            android:text="@string/activity_user_info_man"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_weight="1"
            android:background="@drawable/user_info_gender_select"
            android:text="@string/activity_user_info_female"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_input_email_account_bg"
        android:hint="@string/activity_user_info_birthday"
        android:paddingLeft="8dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_input_email_account_bg"
        android:hint="@string/activity_user_info_height"
        android:paddingLeft="8dp"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_input_email_account_bg"
        android:hint="@string/activity_user_info_weight"
        android:paddingLeft="8dp"
        android:textColorHint="@color/white"/>
</LinearLayout>