<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/fragment_steps_window_bg"
              android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_goal_title"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        />

    <RadioGroup
        android:id="@+id/steps_fragment_dialog_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:contextClickable="true"
        >

        <RadioButton
            android:id="@+id/radio_button_two"
            style="@style/StepsGoalDialogRadioBUttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/steps_goal_two"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/radio_button_three"
            style="@style/StepsGoalDialogRadioBUttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/steps_goal_three"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />

        <RadioButton
            android:id="@+id/radio_button_four"
            style="@style/StepsGoalDialogRadioBUttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/steps_goal_four"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />
    </RadioGroup>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0.8dp"
        android:layout_marginTop="5dp"
        android:background="@color/tutorial_black"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="100dp"
    >
    <Button
        android:id="@+id/steps_fragment_cancel_steps_setting_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        android:text="@string/ble_connection_timeout_cancel"
        />
    <Button
        android:id="@+id/steps_fragment_setting_steps_goal_ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:background="@android:color/transparent"
        android:text="@string/notification_ok"
        />
</LinearLayout>

</LinearLayout>