<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/window_background_color"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/register_title"
            layout="@layout/signup_title_layout"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="20dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@drawable/nevo_logo_image"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_account_page_title"
                android:textColor="@color/text_color"
                android:textSize="30sp"
                android:typeface="monospace"
                />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_input_email_account_bg"
                android:hint="@string/log_in_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:textColor="@color/text_color"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/register_account_activity_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_input_email_account_bg"
                android:hint="@string/register_first_name_hint"
                android:paddingLeft="8dp"
                android:textColor="@color/text_color"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/register_account_activity_edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_input_email_account_bg"
                android:hint="@string/register_last_name_hint"
                android:paddingLeft="8dp"
                android:textColor="@color/text_color"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                />


            <!-- Password Label -->

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_input_email_account_bg"
                android:hint="@string/log_in_password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="@color/text_color"
                android:imeOptions="actionNext"
                />

            <EditText
                android:id="@+id/input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_input_email_account_bg"
                android:hint="@string/register_password_confirm"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="@color/text_color"
                android:imeOptions="actionDone"
              />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/register_terms_text"
                android:textColor="@color/register_account_text_color"
                android:textSize="18sp"
                />

            <CheckBox
                android:id="@+id/sign_up_check_user_is_agree_terms_radio_bt"
                style="@style/CustomCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="8dp"
                android:text="@string/register_terms_is_agree"
                android:textColor="@color/text_color"/>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_login_button_bg"
                android:text="@string/register_create_account"
                android:textAllCaps="false"
                android:textColor="@color/login_text_color_with"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/register_to_login"
                android:textSize="16dip"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>